# fastapi-redis-cache

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: pr-labeler.yml  release-drafter.yml
.github/workflows/: pr-labeler.yml  publish-pypi.yml  release-drafter.yml  tox.yml
src/fastapi_redis_cache/: __init__.py  cache.py  client.py  enums.py  key_gen.py  redis.py  types.py  util.py  version.py
tests/: conftest.py  main.py  pydantic.py  test_cache.py
